--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.6.10",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
