--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Sinulle Räätälöity Internetin Etusivu",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Jonne Liukkonen",
   "license": "ISC",
@@ -25,6 +27,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "concurrently": "^4.1.2",
     "nodemon": "^1.19.1"
   }
 }
