--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
   "author": "Jonne Liukkonen",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.3.3",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
-    "ejs": "^2.6.2",
+    "dotenv": "^8.2.0",
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
-    "express-session": "^1.16.2",
+    "express-session": "^1.17.0",
     "moment": "^2.24.0",
-    "mongoose": "^5.6.10",
-    "passport": "^0.4.0",
+    "mongoose": "^5.8.9",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.2",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.4"
   }
 }
